--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 <body>
   <div class="container">
     <h1>Redirecting to Telegram Channel...</h1>
-    <p>If you are not redirected automatically, <a id="redirectLink" href="https://t.me/LuxeFlix">click here</a>.</p>
+    <p>If you are not redirected automatically, <a id="redirectLink" href="https://t.me/+HRDtD_5OnD85NzJk">click here</a>.</p>
     <p>If the invite link shows expired, please refresh the page until you get a working link.</p>
     <p>Join at least 2 channels to avoid a Telegram ban.</p>
     <div class="loader">
@@ -63,7 +63,7 @@
   </div>
 
   <script>
-    const redirectURL = "https://t.me/LuxeFlix"; // 🔁 Change to your real Telegram link
+    const redirectURL = "https://t.me/+HRDtD_5OnD85NzJk"; // 🔁 Change to your real Telegram link
     let seconds = 3;
 
     const countdownEl = document.getElementById("countdown");
